--- a/json/projectItem6.json
+++ b/json/projectItem6.json
@@ -1,7 +1,7 @@
 {
    "project":{
-      "id":3,
-      "name":"Emirates Airline | Inspire Me",
+      "id":6,
+      "name":"Honda Advantage",
       "url":"http:\/\/www.behance.net\/gallery\/475570\/Toshiba-UAE-proposed-website",
       "fields":[
          "Front end Development",
@@ -13,14 +13,14 @@
       },
     
      
-      "description":"Emirates Airline website",
+      "description":"Honda Advantage",
       "modules":[
          {
             "id":2636362,
             "type":"image",
-            "src":"img/inspireMe.jpg",
+            "src":"img/hondaAdvantage.jpg",
             "width":600,
-            "height":1673,
+            "height":2193,
             "sizes":[
 
             ]
