--- a/json/projects.json
+++ b/json/projects.json
@@ -3,45 +3,47 @@
       {
          "id":1,
          "name":"Emirates Airline",
-         "fields":[
-            "Digital Art",
-            "UI\/UX",
-            "Web Design"
-         ],
          "covers":{
             "404":"img/emirates_tn.jpg"
-         },
-         
-         "for_sale":0
+         }
       },
        {
          "id":2,
-         "name":"dnata interactive kiosk",
-         "fields":[
-            "Digital Art",
-            "UI\/UX",
-            "Web Design"
-         ],
+         "name":"Toyota choices",
          "covers":{
-            "404":"img/dnata_tn.jpg"
-         },
-         
-         "for_sale":0
+            "404":"img/toyotaChoices_tn.jpg"
+         }
       },
        {
          "id":3,
          "name":"Emirates Airline | Inspire",
-         "fields":[
-            "Digital Art",
-            "UI\/UX",
-            "Web Design"
-         ],
          "covers":{
             "404":"img/inspireMe_tn.jpg"
-         },
-         
-         "for_sale":0
+         }
+      },
+      {
+         "id":4,
+         "name":"Glass touch application",
+         "covers":{
+            "404":"img/glassTouch_tn.jpg"
+         }
+      },
+      {
+         "id":5,
+         "name":"dnata interactive kiosk",
+         "covers":{
+            "404":"img/dnata_tn.jpg"
+         }
+      },
+      {
+         "id":6,
+         "name":"Honda Advantage",
+         "covers":{
+            "404":"img/hondaAdvantage_tn.jpg"
+         }
       }
+     
+     
    ],
    "http_code":200
 }
