--- a/json/projectItem4.json
+++ b/json/projectItem4.json
@@ -1,11 +1,11 @@
 {
    "project":{
-      "id":2,
-      "name":"Toyota Choices",
+      "id":4,
+      "name":"Glass touch application",
       "url":"http:\/\/www.behance.net\/gallery\/475570\/Toshiba-UAE-proposed-website",
       "fields":[
-         "Art Direction",
-         "Web Design",
+         "Front end Development",
+         "UI/UX Design",
          "Web Development"
       ],
       "covers":{
@@ -13,14 +13,14 @@
       },
     
      
-      "description":"Toshiba UAE website revamp",
+      "description":"dnata Glass Touch Application",
       "modules":[
          {
             "id":2636362,
             "type":"image",
-            "src":"img/dnata1.jpg",
-            "width":960,
-            "height":533,
+            "src":"img/glassTouch1.jpg",
+            "width":1024,
+            "height":768,
             "sizes":[
 
             ]
@@ -28,9 +28,9 @@
          {
             "id":2636362,
             "type":"image",
-            "src":"img/dnata2.jpg",
-            "width":960,
-            "height":533,
+            "src":"img/glassTouch2.jpg",
+            "width":1024,
+            "height":768,
             "sizes":[
 
             ]
@@ -38,9 +38,9 @@
          {
             "id":2636362,
             "type":"image",
-            "src":"img/dnata3.jpg",
-            "width":960,
-            "height":533,
+            "src":"img/glassTouch3.jpg",
+            "width":1024,
+            "height":768,
             "sizes":[
 
             ]
@@ -48,9 +48,9 @@
          {
             "id":2636362,
             "type":"image",
-            "src":"img/dnata4.jpg",
-            "width":960,
-            "height":533,
+            "src":"img/glassTouch4.jpg",
+            "width":1024,
+            "height":768,
             "sizes":[
 
             ]
@@ -58,9 +58,9 @@
          {
             "id":2636362,
             "type":"image",
-            "src":"img/dnata5.jpg",
-            "width":960,
-            "height":533,
+            "src":"img/glassTouch5.jpg",
+            "width":1024,
+            "height":768,
             "sizes":[
 
             ]
