--- a/json/projectItem7.json
+++ b/json/projectItem7.json
@@ -1,7 +1,7 @@
 {
    "project":{
-      "id":3,
-      "name":"Emirates Airline | Inspire Me",
+      "id":7,
+      "name":"Emirates Executive",
       "url":"http:\/\/www.behance.net\/gallery\/475570\/Toshiba-UAE-proposed-website",
       "fields":[
          "Front end Development",
@@ -18,7 +18,7 @@
          {
             "id":2636362,
             "type":"image",
-            "src":"img/inspireMe.jpg",
+            "src":"img/emiratesExecutiveFinal.jpg",
             "width":600,
             "height":1673,
             "sizes":[
